[package]
name = "keystore"
description = "interesting library..."
version = "0.1.3"
edition = "2024"
repository = "https://labs.wejust.rest/lain/keystore"
[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
openssl = "0.10"
hex = "0.4"
chrono = "0.4"
rustfmt = "0.10.0"

[dev-dependencies]
tempfile = "3.8"
