[package]
name = "keystore"
description = "interesting library..."
version = "0.1.4"
edition = "2024"
repository = "https://labs.wejust.rest/lain/keystore"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[lints.clippy]
upper_case_acronyms = "allow"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
openssl = "0.10"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.27"
